--- a/projects.json
+++ b/projects.json
@@ -1,7 +1,7 @@
 {
 	"paragraphs":[
 		
-		"I am a second year Interactive web design and development student at Georgian College. It was all new thing for me at first but I am familiar with all this and I am excited  to apply excellent Code and design skills to websites. I have gained many relevant designs and technical skills through academic projects.",
+		"Designing is a passion for me and this maked me to go somewhere I belong. With my strong artistic vision combined with growing theoretical skills, I want to do something amazing. My key attribute is thinking logically and I am always seeking new facts and knowledge.",
 		
 		"I am a second year Interactive web design and development student at Georgian College. It was all new thing for me at first but I am familiar with all this and I am excited  to apply excellent Code and design skills to websites. I have gained many relevant designs and technical skills through academic projects.",
 		
